syntax = "proto3";
package chat;

option go_package = "gen/pb";

import "proto/user.proto";

service ChatService {
  rpc Chat(stream ChatRequest) returns (stream ChatResponse) {}
}

message ChatRequest {
  int32 room_id = 1;
  User user = 2;

  oneof action {
    StartAction start = 3;
    TalkAction talk = 4;
  }

  message StartAction {}

  message TalkAction{
    string message = 1;
  }
}

message ChatResponse {
  oneof event {
    WaitingEvent waiting = 1;
    ReadyEvent ready = 2;
    ChatedEvent chated = 3;
    FinishedEvent finished = 4;
  }

  message WaitingEvent {}
  message ReadyEvent {}
  message ChatedEvent {
    repeated string chatLogs = 5;
  }
  message FinishedEvent {}
}