syntax = "proto3";
package chat;

option go_package = "gen/pb";

message User {
  int32 id = 1;
  string nickName = 2;
}